Changed default markdown editor

--- a/_config.yml
+++ b/_config.yml
@@ -79,6 +79,8 @@ JB :
   # Set 'provider' to the comment provider you want to use.
   # Set 'provider' to false to turn commenting off globally.
   #
+  markdown: kramdown
+
   comments :
     provider : disqus
     disqus :
