--- a/_config.yml
+++ b/_config.yml
@@ -8,14 +8,14 @@ pygments: true
 # Themes are encouraged to use these universal variables 
 # so be sure to set them if your theme uses them.
 #
-title : Jekyll Bootstrap
-tagline: Site Tagline
+title : Gopi Krishnan Nambiar
+tagline: Software Engineer
 author :
-  name : Name Lastname
-  email : blah@email.test
-  github : username
-  twitter : username
-  feedburner : feedname
+  name : Gopi Krishnan Nambiar
+  email : gopikrishnan.nambiar@gmail.com
+  github : gkrishnan
+  twitter : gkrishnan
+#  feedburner : N/A
 
 # The production_url is only used when full-domain names are needed
 # such as sitemap.txt 
@@ -82,18 +82,18 @@ JB :
   markdown: kramdown
 
   comments :
-    provider : disqus
-    disqus :
-      short_name : jekyllbootstrap
-    livefyre :
-      site_id : 123
-    intensedebate :
-      account : 123abc
-    facebook :
-      appid : 123
-      num_posts: 5
-      width: 580
-      colorscheme: light
+    provider : false
+  #  disqus :
+  #    short_name : jekyllbootstrap
+  #  livefyre :
+  #    site_id : 123
+  #  intensedebate :
+  #    account : 123abc
+  #  facebook :
+  #    appid : 123
+  #    num_posts: 5
+  #    width: 580
+  #    colorscheme: light
    
   # Settings for analytics helper
   # Set 'provider' to the analytics provider you want to use.
@@ -102,14 +102,14 @@ JB :
   analytics :
     provider : google 
     google : 
-        tracking_id : 'UA-123-12'
-    getclicky :
-      site_id : 
-    mixpanel :
-        token : '_MIXPANEL_TOKEN_'
-    piwik :
-        baseURL : 'myserver.tld/piwik' # Piwik installation address (without protocol)
-        idsite : '1'                   # the id of the site on Piwik
+        tracking_id : 'UA-8154764-1'
+  #  getclicky :
+  #    site_id : 
+  #  mixpanel :
+  #      token : '_MIXPANEL_TOKEN_'
+  #  piwik :
+  #      baseURL : 'myserver.tld/piwik' # Piwik installation address (without protocol)
+  #      idsite : '1'                   # the id of the site on Piwik
 
   # Settings for sharing helper. 
   # Sharing is for things like tweet, plusone, like, reddit buttons etc.
